@@ -1,6 +1,7 @@
 2008-02-26  Michael Stucki  <michael@typo3.org>
 
 	* Rename t3lib_install::getFieldDefinitions_sqlContent() to t3lib_install::getFieldDefinitions_fileContent() and provide a wrapper for backwards compatibility
+	* Lots of white-space fixes (to comply with old patch)
 
 2008-02-26  Oliver Hader  <oh@inpublica.de>
 
